--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -11,11 +11,7 @@
 body {
     font-family: Arial, sans-serif;
 }
-.banner{
-    background-image: url(../img/jumbo.png);
-    background-size: cover;
-    height: 60vh;
-}
+ /*Barra Navigazione  */
 .menu{
     height: 8%;
     line-height: 8%;
@@ -57,64 +53,73 @@ ul li a:hover{
     text-decoration: none;
     font-weight: bold;
 }
-main{
-    text-align: center;
+/* Sezione Banner */
+.banner{
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
+    min-height: 60vh;
+}
+.container1 {
+    width: 60%;
+    margin: 0 auto;
     color: white;
     padding-top: 6%;
-    font-size: 2rem;
-}
-main p {
-    width: 48%;
     text-align: center;
-    margin: 50px auto;
+}
+.container1 h1{
+    font-size: 4rem;
+}
+.container1 p {
     font-size: 1.5rem;
+    width: 80%;
+    margin: 35px auto;
     line-height: 35px;
 }
-.download, .download-button::before{
+.download-button::before{
     content: "\2913";
     font-weight: bold;
+}
+.buttons {
+    text-decoration: none;
+    display: inline-block;
+    padding: 20px 40px;
+    border-radius: 50px;
+    font-size: 1.2rem;
+    margin: auto 20px;
+}
+.download {
+    background-color: white;
+    color: black;
+}
+.web-version {
+    background-color: #23272A;
+    color: white;
 }
 .underline:hover {
     text-decoration: underline;
 }
-.download {
-    display: inline-block;
-    position: absolute;
-    text-decoration: none;
-    float: left;
-    left: 35%;
-    bottom: 45%;
-    background-color: white;
-    color: black;
-    padding: 20px 40px;
-    border-radius: 50px;
-    font-size: 1.2rem;
+/* Paragrafo 1 */
+section {
+    min-height: calc(100vh - 200px);
 }
-.web-version {
-    display: inline-block;
-    position: absolute;
-    text-decoration: none;
-    float: left;
-    left: 49%;
-    bottom: 45%;
-    background-color: #23272A;
-    color: white;
-    padding: 20px 40px;
-    border-radius: 50px;
-    font-size: 1.2rem;
+.container2{
+    text-align: left;
+    width: 65%;
+    padding-top: 6%;
+    margin: 0 auto;
 }
 .left {
-    position: absolute;
     float: left;
-    left: 20%;
+    margin-right: 50px;
+    width: 50%;
 }
 .right {
-    position: absolute;
     float: left;
-    right: 20%;
+    margin-left: 50px;
+    width: 50%;
 }
 .text{
-    width: 20%;
+    width: 40%;
     margin-top: 30px;
 }
 .title {
@@ -127,10 +132,6 @@ main p {
     line-height: 35px;
     color: #3F4345;
 } 
-section {
-    height: calc(100vh - 200px);
-    padding-top: 6%;
-}
 .bg-grey {
     background-color: #F6F6F6;
 }
@@ -141,15 +142,13 @@ section {
     margin-top: -70px;
 }
 .full{
-    height: 100vh;
-}
-.central-text {
-    text-align: center;
+    min-height: 100vh;
 }
 .description2{
     font-size: 1.2rem;
     margin: auto;
     width: 50%;
+    color: #3F4345;
 }
 .stars {
     background-image: url(../img/stars.svg);
@@ -182,7 +181,7 @@ footer {
     width: 33%;
     padding-top: 70px;
     height: 100%;
-    display: inline-block;
+    float: left;
     border: 1px solid red;
     line-height: 50px;
 }
@@ -192,9 +191,11 @@ footer {
 }
 .coloumn2{
     width: 15%;
-    height: 200px;
+    height: 300px;
     border: 1px solid red;
-    display: inline-block;
+    float: left;
+    margin-left: 20px;
+    padding-top: 70px;
 }
 .social-logos {
     display: inline-block;
