--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -98,7 +98,7 @@ ul li a:hover{
 .underline:hover {
     text-decoration: underline;
 }
-/* Paragrafo 1 */
+/* Paragrafi */
 section {
     min-height: calc(100vh - 200px);
 }
@@ -143,6 +143,7 @@ section {
 }
 .full{
     min-height: 100vh;
+    padding-bottom: 100px;
 }
 .description2{
     font-size: 1.2rem;
@@ -156,6 +157,7 @@ section {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    color: #23272A;
 }
 .download-button {
     display: inline-block;
@@ -166,6 +168,7 @@ section {
     border-radius: 50px;
     margin-top: 20px;
 }
+/* Footer */
 footer {
     background-color: #23272A;
     width: 100%;
@@ -173,16 +176,13 @@ footer {
 .footer-container {
     color: white;
     width: 70%;
-    height: 65vh;
     margin: 0 auto;
-    border: 1px solid yellow;
+    padding-bottom: 30px;
 }
 .coloumn1{
     width: 33%;
     padding-top: 70px;
-    height: 100%;
     float: left;
-    border: 1px solid red;
     line-height: 50px;
 }
 .coloumn1 h3{
@@ -191,8 +191,6 @@ footer {
 }
 .coloumn2{
     width: 15%;
-    height: 300px;
-    border: 1px solid red;
     float: left;
     margin-left: 20px;
     padding-top: 70px;
@@ -204,4 +202,37 @@ footer {
 }
 .italian-flag {
     width: 18px;
+}
+.arrow::after {
+  content: "\25BC";
+  font-size: 10px;
+}
+.coloumn2 h4 {
+    color: #255EE9;
+    margin-bottom: 5 px;
+}
+.coloumn2 a {
+    line-height: 40px;
+    text-decoration: none;
+    display: block;
+    color: white;
+}
+hr{
+    border: 1px solid rgba(104, 125, 198, 0.5);
+}
+.kicker{
+    width: 70%;
+    margin: 0 auto;
+}
+.logo-footer {
+    padding: 30px 30px 30px 0;
+}
+.register {
+    float: right;
+    background-color: #93A5E2;
+    color: white;
+    text-decoration: none;
+    padding: 15px;
+    border-radius: 50px;
+    margin-top: 20px;
 }
